// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no group (all groups default) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 288,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockedScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <RCTScrollView
                          ListFooterComponent={null}
                          ListHeaderComponent={
                            <View>
                              <View>
                                <SearchBar
                                  onChangeText={[Function]}
                                  placeholder="Search Members"
                                />
                                <PopupMenuButton
                                  actions={[]}
                                >
                                  <Text />
                                  <Icon
                                    name="ArrowDown"
                                  />
                                </PopupMenuButton>
                              </View>
                            </View>
                          }
                          data={
                            [
                              {
                                "avatarUrl": "foo.gif",
                                "bio": "Hello!",
                                "groupRoles": [],
                                "id": "1",
                                "location": "here",
                                "membershipCommonRoles": [],
                                "name": "Foo Lane",
                              },
                              {
                                "avatarUrl": "bar.png",
                                "bio": "Not a stork",
                                "groupRoles": [],
                                "id": "2",
                                "location": "there",
                                "membershipCommonRoles": [],
                                "name": "Bar Jones",
                              },
                              {
                                "avatarUrl": "baz.png",
                                "bio": "Could be",
                                "groupRoles": [],
                                "id": "3",
                                "membershipCommonRoles": [],
                                "name": "Baz Chu",
                              },
                              {
                                "avatarUrl": "bonk.jpg",
                                "groupRoles": [],
                                "id": "4",
                                "membershipCommonRoles": [],
                                "name": "Bonk Gundsdottir",
                              },
                              {
                                "avatarUrl": "woof.png",
                                "groupRoles": [],
                                "id": "5",
                                "membershipCommonRoles": [],
                              },
                              {
                                "id": -1,
                              },
                            ]
                          }
                          getItem={[Function]}
                          getItemCount={[Function]}
                          keyExtractor={[Function]}
                          onContentSizeChange={[Function]}
                          onEndReached={[Function]}
                          onLayout={[Function]}
                          onMomentumScrollBegin={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={0.0001}
                          stickyHeaderIndices={[]}
                          viewabilityConfigCallbackPairs={[]}
                        >
                          <View>
                            <View
                              collapsable={false}
                              onLayout={[Function]}
                            >
                              <View>
                                <View>
                                  <View>
                                    <Icon
                                      name="Search"
                                    />
                                    <TextInput
                                      autoCapitalize="none"
                                      autoCorrect={false}
                                      autoFocus={false}
                                      editable={true}
                                      onChangeText={[Function]}
                                      placeholder="Search Members"
                                      underlineColorAndroid="transparent"
                                    />
                                  </View>
                                  <View
                                    accessibilityState={
                                      {
                                        "busy": undefined,
                                        "checked": undefined,
                                        "disabled": undefined,
                                        "expanded": undefined,
                                        "selected": undefined,
                                      }
                                    }
                                    accessibilityValue={
                                      {
                                        "max": undefined,
                                        "min": undefined,
                                        "now": undefined,
                                        "text": undefined,
                                      }
                                    }
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      {
                                        "bottom": 5,
                                        "left": 5,
                                        "right": 5,
                                        "top": 5,
                                      }
                                    }
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text />
                                    <Icon
                                      name="ArrowDown"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "foo.gif",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Foo Lane
                                  </Text>
                                  <Text>
                                    here
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Hello!
                                  </Text>
                                </View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bar.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bar Jones
                                  </Text>
                                  <Text>
                                    there
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Not a stork
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "baz.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Baz Chu
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Could be
                                  </Text>
                                </View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bonk.jpg",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bonk Gundsdottir
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View />
                                <View />
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders with invite button when a moderator 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 288,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockedScreen
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <RCTScrollView
                          ListFooterComponent={null}
                          ListHeaderComponent={
                            <View>
                              <Banner
                                group={
                                  {
                                    "allowGroupInvites": true,
                                    "id": 2,
                                  }
                                }
                                handleInviteOnPress={[Function]}
                                showInviteButton={true}
                              />
                              <View>
                                <SearchBar
                                  onChangeText={[Function]}
                                  placeholder="Search Members"
                                />
                                <PopupMenuButton
                                  actions={[]}
                                >
                                  <Text />
                                  <Icon
                                    name="ArrowDown"
                                  />
                                </PopupMenuButton>
                              </View>
                            </View>
                          }
                          data={
                            [
                              {
                                "avatarUrl": "foo.gif",
                                "bio": "Hello!",
                                "groupRoles": {
                                  "items": [],
                                },
                                "id": "1",
                                "location": "here",
                                "membershipCommonRoles": {
                                  "items": [],
                                },
                                "name": "Foo Lane",
                              },
                              {
                                "avatarUrl": "bar.png",
                                "bio": "Not a stork",
                                "groupRoles": {
                                  "items": [],
                                },
                                "id": "2",
                                "location": "there",
                                "membershipCommonRoles": {
                                  "items": [],
                                },
                                "name": "Bar Jones",
                              },
                              {
                                "avatarUrl": "baz.png",
                                "bio": "Could be",
                                "groupRoles": {
                                  "items": [],
                                },
                                "id": "3",
                                "membershipCommonRoles": {
                                  "items": [],
                                },
                                "name": "Baz Chu",
                              },
                              {
                                "avatarUrl": "bonk.jpg",
                                "groupRoles": {
                                  "items": [],
                                },
                                "id": "4",
                                "membershipCommonRoles": {
                                  "items": [],
                                },
                                "name": "Bonk Gundsdottir",
                              },
                              {
                                "avatarUrl": "woof.png",
                                "groupRoles": {
                                  "items": [],
                                },
                                "id": "5",
                                "membershipCommonRoles": {
                                  "items": [],
                                },
                              },
                              {
                                "id": -1,
                              },
                            ]
                          }
                          getItem={[Function]}
                          getItemCount={[Function]}
                          keyExtractor={[Function]}
                          onContentSizeChange={[Function]}
                          onEndReached={[Function]}
                          onLayout={[Function]}
                          onMomentumScrollBegin={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={0.0001}
                          stickyHeaderIndices={[]}
                          viewabilityConfigCallbackPairs={[]}
                        >
                          <View>
                            <View
                              collapsable={false}
                              onLayout={[Function]}
                            >
                              <View>
                                <View>
                                  <View
                                    style={
                                      [
                                        {
                                          "overflow": "hidden",
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <FastImageView
                                      defaultSource={null}
                                      resizeMode="cover"
                                      source={
                                        {
                                          "uri": undefined,
                                        }
                                      }
                                      style={
                                        {
                                          "bottom": 0,
                                          "left": 0,
                                          "position": "absolute",
                                          "right": 0,
                                          "top": 0,
                                        }
                                      }
                                    />
                                  </View>
                                  <div
                                    colors={
                                      [
                                        "rgba(0, 0, 0, 0)",
                                        "rgba(0, 0, 0, 0.1)",
                                        "rgba(0, 0, 0, 0.3)",
                                        "rgba(0, 0, 0, 0.6)",
                                      ]
                                    }
                                  />
                                  <View>
                                    <Text />
                                  </View>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View>
                                        <View>
                                          <Icon
                                            name="Invite"
                                          />
                                          <Text>
                                            Invite
                                          </Text>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                                <View>
                                  <View>
                                    <Icon
                                      name="Search"
                                    />
                                    <TextInput
                                      autoCapitalize="none"
                                      autoCorrect={false}
                                      autoFocus={false}
                                      editable={true}
                                      onChangeText={[Function]}
                                      placeholder="Search Members"
                                      underlineColorAndroid="transparent"
                                    />
                                  </View>
                                  <View
                                    accessibilityState={
                                      {
                                        "busy": undefined,
                                        "checked": undefined,
                                        "disabled": undefined,
                                        "expanded": undefined,
                                        "selected": undefined,
                                      }
                                    }
                                    accessibilityValue={
                                      {
                                        "max": undefined,
                                        "min": undefined,
                                        "now": undefined,
                                        "text": undefined,
                                      }
                                    }
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      {
                                        "bottom": 5,
                                        "left": 5,
                                        "right": 5,
                                        "top": 5,
                                      }
                                    }
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Text />
                                    <Icon
                                      name="ArrowDown"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "foo.gif",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Foo Lane
                                  </Text>
                                  <Text>
                                    here
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Hello!
                                  </Text>
                                </View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bar.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bar Jones
                                  </Text>
                                  <Text>
                                    there
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Not a stork
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "baz.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Baz Chu
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  >
                                    Could be
                                  </Text>
                                </View>
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                >
                                  <View>
                                    <View>
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "bonk.jpg",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                    </View>
                                  </View>
                                  <Text>
                                    Bonk Gundsdottir
                                  </Text>
                                  <View>
                                    <View
                                      accessibilityState={
                                        {
                                          "busy": undefined,
                                          "checked": undefined,
                                          "disabled": undefined,
                                          "expanded": undefined,
                                          "selected": undefined,
                                        }
                                      }
                                      accessibilityValue={
                                        {
                                          "max": undefined,
                                          "min": undefined,
                                          "now": undefined,
                                          "text": undefined,
                                        }
                                      }
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={5}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View />
                                    </View>
                                  </View>
                                  <Text
                                    numberOfLines={4}
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              onFocusCapture={[Function]}
                              onLayout={[Function]}
                            >
                              <View>
                                <View />
                                <View />
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
